fix: UI on mobile

--- a/public/styles.css
+++ b/public/styles.css
@@ -202,3 +202,9 @@ button:active {
     font-size: 0.8rem;
   }
 }
+
+@media (max-width: 425px) {
+  .search-form {
+    flex-direction: column;
+  }
+}
